# musicmanager

./: .gitignore  flake.nix  pyproject.toml
musicmanager/: __main__.py  auto.py  download.py  m3u.py  neobackup.py  newpipetom3u.py
